Translations by vngmar to translation/pt/blurb/sn-blurbs_translation-pt.json

--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -90,5 +90,6 @@
   "sn-blurbs:sn2.6": "A deidade Kāmada se dirige ao Buda com várias declarações enigmáticas lamentando a dificuldade da prática espiritual. O Buda concorda, mas aponta que os verdadeiros praticantes a fazem, mesmo que seja difícil.",
   "sn-blurbs:sn2.7": "Pañcālacaṇḍa elogia o Buda por encontrar a abertura em meio ao confinamento do mundo. O Buda, porém, afirma que qualquer um com atenção plena e tranquilidade pode encontrar esta saída.",
   "sn-blurbs:sn2.8": "Tāyana, uma deidade que, numa vida passada, era líder de uma seita não-budista, pronuncia versos de louvor ao esforço e à disciplina. Esses versos famosos são frequentemente recitados por monges theravadin.",
-  "sn-blurbs:sn2.9": "Em uma parábola sobre um eclipse lunar, o deus lunar Candimā é devorado pelo demônio Rāhu. Candimā apela ao Buda, que ordena a Rāhu o abandone. Este sutta é recitado como um versículo de proteção."
+  "sn-blurbs:sn2.9": "Em uma parábola sobre um eclipse lunar, o deus lunar Candimā é devorado pelo demônio Rāhu. Candimā apela ao Buda, que ordena a Rāhu o abandone. Este sutta é recitado como um versículo de proteção.",
+  "sn-blurbs:sn2.10": "Em uma parábola sobre um eclipse solar, o deus solar Suriya é devorado pelo demônio Rāhu. Suriya apela ao Buda, que ordena a Rāhu que o abandone. Este sutta é recitado como um versículo de proteção."
 }
