--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -61,7 +61,7 @@
   "ja-name:60.ja53": "Der volle Krug ",
   "ja-name:61.ja54": "Der Baum mit Namen Welche-Frucht ",
   "ja-name:62.ja55": "Fünf Waffen ",
-  "ja-name:63.ja56": "Eine Masse an Gold ",
+  "ja-name:63.ja56": "Ein Haufen Gold ",
   "ja-name:64.ja57": "Der Affenkönig ",
   "ja-name:65.ja58": "Drei Eigenschaften ",
   "ja-name:66.ja59": "Der Trommler ",
