--- a/translation/en/kovilo/sutta/an/an4/an4.22_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/an/an4/an4.22_translation-en-kovilo.json
@@ -21,7 +21,7 @@
   "an4.22:4.1": "There are these four qualities that make one an elder.",
   "an4.22:4.2": "What four?",
   "an4.22:4.3": "Here, a monk is virtuous. He dwells restrained by the restraint of the monk's rules and is skilled in his behavior and chooses his environment wisely. He sees danger in the slightest faults and, having taken them on, he trains himself according to the training precepts.",
-  "an4.22:4.4": "He has studied much and remembered what he's heard of those teachings—beautiful in the beginning, middle, and end—which declare the utterly complete and pure holy life with its essentials and features. He has studied, memorized, verbally recited, intellectually examined, and, with vision, has thoroughly realized the point of these sorts of teachings.",
+  "an4.22:4.4": "He has studied much and remembered what he has heard of those teachings—beautiful in the beginning, middle, and end—which declare the utterly complete and pure holy life with its essentials and features. He has studied, memorized, verbally recited, intellectually examined, and, with vision, has thoroughly realized the point of these sorts of teachings.",
   "an4.22:4.5": "At will and without difficulty, they easily gain the four meditative immersions which exemplify the mastered mind and are pleasant abidings here and now.",
   "an4.22:4.6": "With the exhaustion of outflows, he dwells having seen personally and attained in this present life with direct knowledge, by himself the freedoms of mind and discernment that are free of outflow.",
   "an4.22:4.7": "These are the four qualities that make one an elder.",
