--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -468,5 +468,6 @@
   "dn34:2.1.20": "And further, he is mindful, endowed with exceptional memory and attentiveness. He is one who remembers and recollects even what was done and said long ago.",
   "dn34:2.1.21": "This is the seventh cause, the seventh support that leads to acquiring the unacquired discernment that is foundational to one living the holy life, and to furthering, increasing, cultivating, and fulfilling that which has been acquired.",
   "dn34:2.1.22": "And further, he dwells observing the arising and passing away of the five aggregates of attachment:",
-  "dn34:2.1.23": "‘Such is form. Such is form's origin. Such is form's cessation."
+  "dn34:2.1.23": "‘Such is form. Such is form's origin. Such is form's cessation.",
+  "dn34:2.1.24": "‘Such is feeling. Such is feeling's origin. Such is feeling's cessation."
 }
