Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -471,5 +471,6 @@
   "dn34:2.1.23": "‘Such is form. Such is form's origin. Such is form's cessation.",
   "dn34:2.1.24": "Such is feeling. Such is feeling's origin. Such is feeling's cessation.",
   "dn34:2.1.25": "Such is perception. Such is perception's origin. Such is perception's cessation.",
-  "dn34:2.1.26": "Such are volitional actions. Such are volitional actions' origin. Such are volitional actions' cessation."
+  "dn34:2.1.26": "Such are volitional actions. Such are volitional actions' origin. Such are volitional actions' cessation.",
+  "dn34:2.1.27": "Such is consciousness. Such is consciousness's origin. Such is consciousness's cessation.’"
 }
