--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -472,5 +472,6 @@
   "dn34:2.1.24": "Such is feeling. Such is feeling's origin. Such is feeling's cessation.",
   "dn34:2.1.25": "Such is perception. Such is perception's origin. Such is perception's cessation.",
   "dn34:2.1.26": "Such are volitional actions. Such are volitional actions' origin. Such are volitional actions' cessation.",
-  "dn34:2.1.27": "Such is consciousness. Such is consciousness's origin. Such is consciousness's cessation.’"
+  "dn34:2.1.27": "Such is consciousness. Such is consciousness's origin. Such is consciousness's cessation.’",
+  "dn34:2.1.28": "This is the eighth cause, the eighth support that leads to acquiring the unacquired discernment that is foundational to one living the holy life, and to furthering, increasing, cultivating, and fulfilling that which has been acquired."
 }
