--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -477,5 +477,6 @@
   "dn34:2.1.29": "These are the eight things that are of great help.",
   "dn34:2.1.30": "What are the eight things that are to be cultivated?",
   "dn34:2.1.31": "The noble eightfold path, namely—",
-  "dn34:2.1.32": "Right View; Right Thought; Right Speech; Right Action; Right Livelihood; Right Effort; Right Mindfulness; Right Collectedness."
+  "dn34:2.1.32": "Right View; Right Thought; Right Speech; Right Action; Right Livelihood; Right Effort; Right Mindfulness; Right Collectedness.",
+  "dn34:2.1.33": "These are the eight things that are to be cultivated."
 }
