--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -480,5 +480,6 @@
   "dn34:2.1.32": "Right View; Right Thought; Right Speech; Right Action; Right Livelihood; Right Effort; Right Mindfulness; Right Collectedness.",
   "dn34:2.1.33": "These are the eight things that are to be cultivated.",
   "dn34:2.1.34": "What are the eight things that are to be understood accurately?",
-  "dn34:2.1.35": "The eight worldly phenomena—"
+  "dn34:2.1.35": "The eight worldly phenomena—",
+  "dn34:2.1.36": "Gain and loss; popularity and disgrace; praise and blame; pleasure and pain."
 }
