--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -483,5 +483,6 @@
   "dn34:2.1.35": "The eight worldly phenomena—",
   "dn34:2.1.36": "Gain and loss; popularity and disgrace; praise and blame; pleasure and pain.",
   "dn34:2.1.37": "These are the eight things that are to be understood accurately.",
-  "dn34:2.1.38": "What are the eight things that are to be abandoned?"
+  "dn34:2.1.38": "What are the eight things that are to be abandoned?",
+  "dn34:2.1.39": "The eight wrongnesses—"
 }
