--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -485,5 +485,6 @@
   "dn34:2.1.37": "These are the eight things that are to be understood accurately.",
   "dn34:2.1.38": "What are the eight things that are to be abandoned?",
   "dn34:2.1.39": "The eight wrongnesses—",
-  "dn34:2.1.40": "Wrong view; wrong thought; wrong speech; wrong action; wrong livelihood; wrong effort; wrong mindfulness; wrong collectedness."
+  "dn34:2.1.40": "Wrong view; wrong thought; wrong speech; wrong action; wrong livelihood; wrong effort; wrong mindfulness; wrong collectedness.",
+  "dn34:2.1.41": "These are the eight things that are to be abandoned."
 }
