--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -486,5 +486,6 @@
   "dn34:2.1.38": "What are the eight things that are to be abandoned?",
   "dn34:2.1.39": "The eight wrongnesses—",
   "dn34:2.1.40": "Wrong view; wrong thought; wrong speech; wrong action; wrong livelihood; wrong effort; wrong mindfulness; wrong collectedness.",
-  "dn34:2.1.41": "These are the eight things that are to be abandoned."
+  "dn34:2.1.41": "These are the eight things that are to be abandoned.",
+  "dn34:2.1.42": "What are the eight things that lead to backsliding?"
 }
