--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -488,5 +488,6 @@
   "dn34:2.1.40": "Wrong view; wrong thought; wrong speech; wrong action; wrong livelihood; wrong effort; wrong mindfulness; wrong collectedness.",
   "dn34:2.1.41": "These are the eight things that are to be abandoned.",
   "dn34:2.1.42": "What are the eight things that lead to backsliding?",
-  "dn34:2.1.43": "The eight bases of laziness."
+  "dn34:2.1.43": "The eight bases of laziness.",
+  "dn34:2.1.44": "Here, there is work to be done by a monk,"
 }
