--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -490,5 +490,6 @@
   "dn34:2.1.42": "What are the eight things that lead to backsliding?",
   "dn34:2.1.43": "The eight bases of laziness.",
   "dn34:2.1.44": "Here, there is work to be done by a monk,",
-  "dn34:2.1.45": "and he thinks:"
+  "dn34:2.1.45": "and he thinks:",
+  "dn34:2.1.46": "‘I have work to do. (XXXWHY FUTURE \"bhavissati\"?XXX) When doing the work, my body will get tired. Why don't I take a nap.’"
 }
