--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -496,5 +496,6 @@
   "dn34:2.1.48": "This is the first bases of laziness.",
   "dn34:2.1.49": "Or alternatively, a monk has completed some work,",
   "dn34:2.1.50": "and he thinks:",
-  "dn34:2.1.51": "‘I have completed some work. When doing the work, my body got tired. Why don't I take a nap.’"
+  "dn34:2.1.51": "‘I have completed some work. When doing the work, my body got tired. Why don't I take a nap.’",
+  "dn34:2.1.52": "So he takes a nap and doesn't kindle energy for attaining the unattained, acquiring the unacquired, or seeing for himself that which he has not seen for himself."
 }
