Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -492,7 +492,7 @@
   "dn34:2.1.44": "Here, there is work to be done by a monk,",
   "dn34:2.1.45": "and he thinks:",
   "dn34:2.1.46": "‘I have work to do. When doing the work, my body will get tired. Why don't I take a nap.’",
-  "dn34:2.1.47": "So he takes a nap and doesn't kindle energy for attaining the unattained, acquiring the unacquired, or seeing for himself that which has not been seen for himself.",
+  "dn34:2.1.47": "So he takes a nap and doesn't kindle energy for attaining the unattained, acquiring the unacquired, or seeing for himself that which he has not seen for himself.",
   "dn34:2.1.48": "This is the first bases of laziness.",
   "dn34:2.1.49": "Or alternatively, a monk has completed some work,",
   "dn34:2.1.50": "and he thinks:",
