Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -498,5 +498,6 @@
   "dn34:2.1.50": "and he thinks:",
   "dn34:2.1.51": "‘I have completed some work. When doing the work, my body got tired. Why don't I take a nap.’",
   "dn34:2.1.52": "So he takes a nap and doesn't kindle energy for attaining the unattained, acquiring the unacquired, or seeing for himself that which he has not seen for himself.",
-  "dn34:2.1.53": "This is the second bases of laziness."
+  "dn34:2.1.53": "This is the second bases of laziness.",
+  "dn34:2.1.54": "Or alternatively, a monk has a trip to make,"
 }
