--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -502,5 +502,6 @@
   "dn34:2.1.54": "Or alternatively, a monk has a trip to make,",
   "dn34:2.1.55": "and he thinks:",
   "dn34:2.1.56": "‘I have a trip to take. When taking the trip, my body will get tired. Why don't I take a nap.’",
-  "dn34:2.1.57": "So he takes a nap and doesn't kindle energy for attaining the unattained, acquiring the unacquired, or seeing for himself that which he has not seen for himself."
+  "dn34:2.1.57": "So he takes a nap and doesn't kindle energy for attaining the unattained, acquiring the unacquired, or seeing for himself that which he has not seen for himself.",
+  "dn34:2.1.58": "This is the third bases of laziness."
 }
