Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -507,5 +507,6 @@
   "dn34:2.1.59": "Or alternatively, a monk has completed a trip,",
   "dn34:2.1.60": "and he thinks:",
   "dn34:2.1.61": "‘I have completed a trip. When taking the trip, my body got tired. Why don't I take a nap.’",
-  "dn34:2.1.62": "So he takes a nap and doesn't kindle energy for attaining the unattained, acquiring the unacquired, or seeing for himself that which he has not seen for himself."
+  "dn34:2.1.62": "So he takes a nap and doesn't kindle energy for attaining the unattained, acquiring the unacquired, or seeing for himself that which he has not seen for himself.",
+  "dn34:2.1.63": "This is the fourth bases of laziness."
 }
