Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -511,5 +511,6 @@
   "dn34:2.1.63": "This is the fourth bases of laziness.",
   "dn34:2.1.64": "Or alternatively, a monk walking for alms in a town or village does not gain his fill of coarse or choice food,",
   "dn34:2.1.65": "and he thinks:",
-  "dn34:2.1.66": "‘Walking for alms in the town or village, I did not get my fill of coarse or choice food. Because of this, my body is tired and unfit for work. Why don't I take a nap.’"
+  "dn34:2.1.66": "‘Walking for alms in the town or village, I did not get my fill of coarse or choice food. Because of this, my body is tired and unfit for work. Why don't I take a nap.’",
+  "dn34:2.1.67": "This is the fifth bases of laziness."
 }
