--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -515,5 +515,6 @@
   "dn34:2.1.67": "This is the fifth bases of laziness.",
   "dn34:2.1.68": "Or alternatively, a monk walking for alms in a town or village does gain his fill of coarse or choice food,",
   "dn34:2.1.69": "and he thinks:",
-  "dn34:2.1.70": "‘Walking for alms in the town or village, I got my fill of coarse or choice food. Because of this, my body is heavy and unfit for work. Why don't I take a nap.’"
+  "dn34:2.1.70": "‘Walking for alms in the town or village, I got my fill of coarse or choice food. Because of this, my body is heavy and unfit for work. Why don't I take a nap.’",
+  "dn34:2.1.71": "So he takes a nap and doesn't kindle energy for attaining the unattained, acquiring the unacquired, or seeing for himself that which he has not seen for himself."
 }
