Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -516,5 +516,6 @@
   "dn34:2.1.68": "Or alternatively, a monk walking for alms in a town or village does gain his fill of coarse or choice food,",
   "dn34:2.1.69": "and he thinks:",
   "dn34:2.1.70": "‘Walking for alms in the town or village, I got my fill of coarse or choice food. Because of this, my body is heavy and unfit for work. Why don't I take a nap.’",
-  "dn34:2.1.71": "So he takes a nap and doesn't kindle energy for attaining the unattained, acquiring the unacquired, or seeing for himself that which he has not seen for himself."
+  "dn34:2.1.71": "So he takes a nap and doesn't kindle energy for attaining the unattained, acquiring the unacquired, or seeing for himself that which he has not seen for himself.",
+  "dn34:2.1.72": "This is the sixth bases of laziness."
 }
