--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -518,7 +518,7 @@
   "dn34:2.1.70": "‘Walking for alms in the town or village, I got my fill of coarse or choice food. Because of this, my body is heavy and unfit for work. Why don't I take a nap.’",
   "dn34:2.1.71": "So he takes a nap and doesn't kindle energy for attaining the unattained, acquiring the unacquired, or seeing for himself that which he has not seen for himself.",
   "dn34:2.1.72": "This is the sixth bases of laziness.",
-  "dn34:2.1.73": "Further, a monk has some minor arisen ailment, and he thinks:",
+  "dn34:2.1.73": "Or alternatively, a monk has some minor arisen ailment, and he thinks:",
   "dn34:2.1.74": "‘I have some minor arisen ailment. It is suitable to take a nap. Why don't I take a nap.’",
   "dn34:2.1.75": "So he takes a nap and doesn't kindle energy for attaining the unattained, acquiring the unacquired, or seeing for himself that which he has not seen for himself.",
   "dn34:2.1.76": "This is the seventh bases of laziness."
