--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -93,5 +93,6 @@
   "sn-blurbs:sn2.9": "Em uma parábola sobre um eclipse lunar, o deus lunar Candimā é devorado pelo demônio Rāhu. Candimā apela ao Buda, que ordena a Rāhu o abandone. Este sutta é recitado como um versículo de proteção.",
   "sn-blurbs:sn2.10": "Em uma parábola sobre um eclipse solar, o deus solar Suriya é devorado pelo demônio Rāhu. Suriya apela ao Buda, que ordena a Rāhu que o abandone. Este sutta é recitado como um versículo de proteção.",
   "sn-blurbs:sn2.11": "A divindade Candimasa diz que os que praticam a absorção certamente encontrarão a saída. O Buda acrescenta que eles devem ser diligentes na prática e abandonar as faltas.",
-  "sn-blurbs:sn2.12": "A deidade Veṇhu celebra a alegria dos que seguem os ensinamentos do Buda. O Buda afirma que estes escaparão da morte. Veṇhu é a ortografia páli do sânscrito Viṣṇu, o que faz desta uma rara aparição de um deus deste nome nos textos antigos."
+  "sn-blurbs:sn2.12": "A deidade Veṇhu celebra a alegria dos que seguem os ensinamentos do Buda. O Buda afirma que estes escaparão da morte. Veṇhu é a ortografia páli do sânscrito Viṣṇu, o que faz desta uma rara aparição de um deus deste nome nos textos antigos.",
+  "sn-blurbs:sn2.13": "O deus Dīghalaṭṭhi visita o Buda em Rājagaha e elogia um discípulo mendicante que pratica a meditação."
 }
