Translations by vngmar to translation/pt/blurb/sn-blurbs_translation-pt.json

--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -98,5 +98,6 @@
   "sn-blurbs:sn2.14": "A deidade Nandana pergunta ao Buda quem é virtuoso, sábio, transcendeu o sofrimento e é adorado pelos próprios deuses. O Buda responde que tal pessoa é um arahant.",
   "sn-blurbs:sn2.15": "Candana pergunta quem atravessa a enchente. O Buda responde que esta pessoa é virtuosa, sábia, pacífica e transcendeu o apego ao renascimento.",
   "sn-blurbs:sn2.16": "A deidade Vasudatta diz que um discípulo mendicante deve viver como se seu cabelo estivesse em chamas para que se livre dos desejos sensuais. O Buda modifica o verso para dar ênfase no abandono do apego a si.",
-  "sn-blurbs:sn2.17": "O deus Subrahmā indaga sobre como se livrar do medo. O Buda responde que não há como se livrar do medo sem abandonar tudo."
+  "sn-blurbs:sn2.17": "O deus Subrahmā indaga sobre como se livrar do medo. O Buda responde que não há como se livrar do medo sem abandonar tudo.",
+  "sn-blurbs:sn2.18": "Em Sāketa, o deus Kakudha pergunta ao Buda se ele sente satisfação ou tristeza. O Buda responde que, dado que ele não tem apegos, ele não sente satisfação nem tristeza."
 }
