Translations by vngmar to translation/pt/blurb/sn-blurbs_translation-pt.json

--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -99,5 +99,6 @@
   "sn-blurbs:sn2.15": "Candana pergunta quem atravessa a enchente. O Buda responde que esta pessoa é virtuosa, sábia, pacífica e transcendeu o apego ao renascimento.",
   "sn-blurbs:sn2.16": "A deidade Vasudatta diz que um discípulo mendicante deve viver como se seu cabelo estivesse em chamas para que se livre dos desejos sensuais. O Buda modifica o verso para dar ênfase no abandono do apego a si.",
   "sn-blurbs:sn2.17": "O deus Subrahmā indaga sobre como se livrar do medo. O Buda responde que não há como se livrar do medo sem abandonar tudo.",
-  "sn-blurbs:sn2.18": "Em Sāketa, o deus Kakudha pergunta ao Buda se ele sente satisfação ou tristeza. O Buda responde que, dado que ele não tem apegos, ele não sente satisfação nem tristeza."
+  "sn-blurbs:sn2.18": "Em Sāketa, o deus Kakudha pergunta ao Buda se ele sente satisfação ou tristeza. O Buda responde que, dado que ele não tem apegos, ele não sente satisfação nem tristeza.",
+  "sn-blurbs:sn2.19": "O deus Uttara fala sobre a transitoriedade da vida, dizendo que uma pessoa deve fazer o que é bom para renascer em uma vida futura que seja feliz. O Buda responde que uma pessoa deve abandonar o apego."
 }
