--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -100,5 +100,6 @@
   "sn-blurbs:sn2.16": "A deidade Vasudatta diz que um discípulo mendicante deve viver como se seu cabelo estivesse em chamas para que se livre dos desejos sensuais. O Buda modifica o verso para dar ênfase no abandono do apego a si.",
   "sn-blurbs:sn2.17": "O deus Subrahmā indaga sobre como se livrar do medo. O Buda responde que não há como se livrar do medo sem abandonar tudo.",
   "sn-blurbs:sn2.18": "Em Sāketa, o deus Kakudha pergunta ao Buda se ele sente satisfação ou tristeza. O Buda responde que, dado que ele não tem apegos, ele não sente satisfação nem tristeza.",
-  "sn-blurbs:sn2.19": "O deus Uttara fala sobre a transitoriedade da vida, dizendo que uma pessoa deve fazer o que é bom para renascer em uma vida futura que seja feliz. O Buda responde que uma pessoa deve abandonar o apego."
+  "sn-blurbs:sn2.19": "O deus Uttara fala sobre a transitoriedade da vida, dizendo que uma pessoa deve fazer o que é bom para renascer em uma vida futura que seja feliz. O Buda responde que uma pessoa deve abandonar o apego.",
+  "sn-blurbs:sn2.20": "Uma deidade que fora o discípulo do Buda em sua vida passada, Anāthapiṇḍika, visita o Buda e recita versos celebrando os bons frutos do mosteiro do Parque Jeta—que ele oferecera ao Buda—, o Dhamma e o venerável Sāriputta."
 }
