Translations by vngmar to translation/pt/blurb/sn-blurbs_translation-pt.json

--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -101,5 +101,6 @@
   "sn-blurbs:sn2.17": "O deus Subrahmā indaga sobre como se livrar do medo. O Buda responde que não há como se livrar do medo sem abandonar tudo.",
   "sn-blurbs:sn2.18": "Em Sāketa, o deus Kakudha pergunta ao Buda se ele sente satisfação ou tristeza. O Buda responde que, dado que ele não tem apegos, ele não sente satisfação nem tristeza.",
   "sn-blurbs:sn2.19": "O deus Uttara fala sobre a transitoriedade da vida, dizendo que uma pessoa deve fazer o que é bom para renascer em uma vida futura que seja feliz. O Buda responde que uma pessoa deve abandonar o apego.",
-  "sn-blurbs:sn2.20": "Uma deidade que fora o discípulo do Buda em sua vida passada, Anāthapiṇḍika, visita o Buda e recita versos celebrando os bons frutos do mosteiro do Parque Jeta—que ele oferecera ao Buda—, o Dhamma e o venerável Sāriputta."
+  "sn-blurbs:sn2.20": "Uma deidade que fora o discípulo do Buda em sua vida passada, Anāthapiṇḍika, visita o Buda e recita versos celebrando os bons frutos do mosteiro do Parque Jeta—que ele oferecera ao Buda—, o Dhamma e o venerável Sāriputta.",
+  "sn-blurbs:sn2.21": "A deidade Siva diz que uma pessoa só deve se associar com os bons e que isto a levará à felicidade. O Buda acrescenta que associar-se com os bons leva ao fim do sofrimento. Siva é a ortografia páli do sânscrito Śiva, o que faz desta uma rara aparição de um deus deste nome nos textos antigos."
 }
