--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -103,5 +103,6 @@
   "sn-blurbs:sn2.19": "O deus Uttara fala sobre a transitoriedade da vida, dizendo que uma pessoa deve fazer o que é bom para renascer em uma vida futura que seja feliz. O Buda responde que uma pessoa deve abandonar o apego.",
   "sn-blurbs:sn2.20": "Uma deidade que fora o discípulo do Buda em sua vida passada, Anāthapiṇḍika, visita o Buda e recita versos celebrando os bons frutos do mosteiro do Parque Jeta—que ele oferecera ao Buda—, o Dhamma e o venerável Sāriputta.",
   "sn-blurbs:sn2.21": "A deidade Siva diz que uma pessoa só deve se associar com os bons e que isto a levará à felicidade. O Buda acrescenta que associar-se com os bons leva ao fim do sofrimento. Siva é a ortografia páli do sânscrito Śiva, o que faz desta uma rara aparição de um deus deste nome nos textos antigos.",
-  "sn-blurbs:sn2.22": "A deidade Khema recita vários versos louvando os bons atos. O Buda responde com um símile para alguém que abandonou o caminho dos bons."
+  "sn-blurbs:sn2.22": "A deidade Khema recita vários versos louvando os bons atos. O Buda responde com um símile para alguém que abandonou o caminho dos bons.",
+  "sn-blurbs:sn2.23": "A deidade Serī fala de como todos gostam de comida, ao que o Buda responde com versos louvando a generosidade. Serī fala de sua própria generosidade em uma vida passada."
 }
