--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -106,5 +106,6 @@
   "sn-blurbs:sn2.22": "A deidade Khema recita vários versos louvando os bons atos. O Buda responde com um símile para alguém que abandonou o caminho dos bons.",
   "sn-blurbs:sn2.23": "A deidade Serī fala de como todos gostam de comida, ao que o Buda responde com versos louvando a generosidade. Serī fala de sua própria generosidade em uma vida passada.",
   "sn-blurbs:sn2.24": "A deidade Ghaṭīkāra fala de sete discípulos mendicantes que renasceram no plano Aviha. Este sutta é semelhante ao SN 1.50.",
-  "sn-blurbs:sn2.25": "Alguns monges cossalanos se tornaram negligentes e foram repreendidos pela divindade Jantu."
+  "sn-blurbs:sn2.25": "Alguns monges cossalanos se tornaram negligentes e foram repreendidos pela divindade Jantu.",
+  "sn-blurbs:sn2.26": "Rohitassa pergunta ao Buda se é possível chegar ao fim do mundo por meio de uma viagem. O Buda diz não e Rohitassa conta como, quando fora um clarividente em uma vida passada, ele tentou atingir este objetivo e fracassou. O Buda diz que o fim do mundo é encontrado dentro deste corpo."
 }
