--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -107,5 +107,6 @@
   "sn-blurbs:sn2.23": "A deidade Serī fala de como todos gostam de comida, ao que o Buda responde com versos louvando a generosidade. Serī fala de sua própria generosidade em uma vida passada.",
   "sn-blurbs:sn2.24": "A deidade Ghaṭīkāra fala de sete discípulos mendicantes que renasceram no plano Aviha. Este sutta é semelhante ao SN 1.50.",
   "sn-blurbs:sn2.25": "Alguns monges cossalanos se tornaram negligentes e foram repreendidos pela divindade Jantu.",
-  "sn-blurbs:sn2.26": "Rohitassa pergunta ao Buda se é possível chegar ao fim do mundo por meio de uma viagem. O Buda diz não e Rohitassa conta como, quando fora um clarividente em uma vida passada, ele tentou atingir este objetivo e fracassou. O Buda diz que o fim do mundo é encontrado dentro deste corpo."
+  "sn-blurbs:sn2.26": "Rohitassa pergunta ao Buda se é possível chegar ao fim do mundo por meio de uma viagem. O Buda diz não e Rohitassa conta como, quando fora um clarividente em uma vida passada, ele tentou atingir este objetivo e fracassou. O Buda diz que o fim do mundo é encontrado dentro deste corpo.",
+  "sn-blurbs:sn2.27": "Nanda fala da transitoriedade da vida, dizendo que uma pessoa deve fazer o que é bom para ter uma vida futura feliz. O Buda responde dizendo que se deve abandonar o apego."
 }
