--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -109,5 +109,6 @@
   "sn-blurbs:sn2.25": "Alguns monges cossalanos se tornaram negligentes e foram repreendidos pela divindade Jantu.",
   "sn-blurbs:sn2.26": "Rohitassa pergunta ao Buda se é possível chegar ao fim do mundo por meio de uma viagem. O Buda diz não e Rohitassa conta como, quando fora um clarividente em uma vida passada, ele tentou atingir este objetivo e fracassou. O Buda diz que o fim do mundo é encontrado dentro deste corpo.",
   "sn-blurbs:sn2.27": "Nanda fala da transitoriedade da vida, dizendo que uma pessoa deve fazer o que é bom para ter uma vida futura feliz. O Buda responde dizendo que se deve abandonar o apego.",
-  "sn-blurbs:sn2.28": "O deus Nandivisāla formula uma metáfora complexa para o corpo e indaga sobre como escapar dele."
+  "sn-blurbs:sn2.28": "O deus Nandivisāla formula uma metáfora complexa para o corpo e indaga sobre como escapar dele.",
+  "sn-blurbs:sn2.29": "O Buda pergunta a Ānanda se ele gosta de Sāriputta e, quando ele responde que sim, o deus Susīma e sua côrte aparece, alegrando-se com os elogios de Sāriputta e irradiando diversas cores."
 }
