Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -1,4 +1,5 @@
 {
   "mn17:0.1": "Discorsi Medi 17",
-  "mn17:0.2": "Nella Giungla"
+  "mn17:0.2": "Nella Giungla",
+  "mn17:1.1": "Così ho sentito."
 }
