--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -4,5 +4,7 @@
   "mn17:1.1": "Così ho sentito.",
   "mn17:1.2": "Una volta il Buddha si trovava vicino a Sāvatthī, nel bosco di Jeta, il monastero di Anāthapiṇḍika.",
   "mn17:1.3": "Lì il Buddha si rivolse ai mendicanti,",
-  "mn17:1.4": "“Mendicanti!”"
+  "mn17:1.4": "“Mendicanti!”",
+  "mn17:1.5": "“Venerabile Signore,” risposero i mendicanti.",
+  "mn17:1.6": "Il Buddha disse:"
 }
