--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -6,5 +6,6 @@
   "mn17:1.3": "Lì il Buddha si rivolse ai mendicanti,",
   "mn17:1.4": "“Mendicanti!”",
   "mn17:1.5": "“Venerabile Signore,” risposero i mendicanti.",
-  "mn17:1.6": "Il Buddha disse:"
+  "mn17:1.6": "Il Buddha disse:",
+  "mn17:2.1": "“Mendicanti, vi insegnerò un’esposizione sulla giungla. "
 }
