--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -9,5 +9,6 @@
   "mn17:1.6": "Il Buddha disse:",
   "mn17:2.1": "“Mendicanti, vi insegnerò un’esposizione sulla giungla. ",
   "mn17:2.2": "Ascoltate e prestate attenzione, ora parlo.”",
-  "mn17:2.3": "“Si, Signore,” risposero i mendicanti."
+  "mn17:2.3": "“Si, Signore,” risposero i mendicanti.",
+  "mn17:2.4": "Il Buddha disse:"
 }
