--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -11,5 +11,6 @@
   "mn17:2.2": "Ascoltate e prestate attenzione, ora parlo.”",
   "mn17:2.3": "“Si, Signore,” risposero i mendicanti.",
   "mn17:2.4": "Il Buddha disse:",
-  "mn17:3.1": "“Mendicanti, prendete un mendicante che vive vicino ad una giungla."
+  "mn17:3.1": "“Mendicanti, prendete un mendicante che vive vicino ad una giungla.",
+  "mn17:3.2": "Mentre è lì, la sua presenza mentale non viene stabilita, la sua mente non si raccoglie, i suoi contaminanti non vengono eliminati, e non arriva al santuario supremo."
 }
