Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -23,5 +23,6 @@
   "mn17:4.3": "Ma le necessità della vita sono facili da trovare.",
   "mn17:4.4": "Quel mendicante deve riflettere:",
   "mn17:4.5": "Vivendo vicino a questa giungla, la mia presenza mentale non viene stabilita …",
-  "mn17:4.6": "Ma le necessità della vita sono facili da trovare."
+  "mn17:4.6": "Ma le necessità della vita sono facili da trovare.",
+  "mn17:4.7": "Ma non ho lasciato la vita laica per quella ascetica per le tuniche, cibo elemosinati, alloggi, o medicine e provvigioni per malati."
 }
