Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -30,5 +30,6 @@
   "mn17:5.1": "Prendete un altro mendicante che vive vicino ad una giungla.",
   "mn17:5.2": "Vivendo lì, la sua presenza mentale viene stabilita, la sua mente si raccoglie, i suoi contaminanti vengono eliminati, e arriva al santuario supremo.",
   "mn17:5.3": "Ma le necessità della vita di cui un rinunciante ha bisogno—tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati—sono difficili da trovare. Quel mendicante deve riflettere:",
-  "mn17:5.5": "‘Vivendo vicino a questa giungla, la mia presenza mentale viene stabilita …"
+  "mn17:5.5": "‘Vivendo vicino a questa giungla, la mia presenza mentale viene stabilita …",
+  "mn17:5.6": "Ma le necessità della vita sono difficili da trovare."
 }
