Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -39,5 +39,6 @@
   "mn17:6.2": "La sua presenza mentale viene stabilita …",
   "mn17:6.3": "E le necessità della vita sono facili da trovare.",
   "mn17:6.4": "Quel mendicante deve riflettere:",
-  "mn17:6.5": "‘Vivendo vicino a questa giungla, la mia presenza mentale viene stabilita …"
+  "mn17:6.5": "‘Vivendo vicino a questa giungla, la mia presenza mentale viene stabilita …",
+  "mn17:6.6": "E le necessità della vita sono facili da trovare.’"
 }
