--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -44,5 +44,6 @@
   "mn17:6.7": "Quel mendicante deve rimanere in quella giungla per il resto della sua vita; non deve andarsene.",
   "mn17:7-22.1": "Prendete un mendicante che vive supportato da un villaggio …",
   "mn17:7-22.2": "cittadina …",
-  "mn17:7-22.3": "città …"
+  "mn17:7-22.3": "città …",
+  "mn17:7-22.4": "Paese …"
 }
