Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -45,5 +45,6 @@
   "mn17:7-22.1": "Prendete un mendicante che vive supportato da un villaggio …",
   "mn17:7-22.2": "cittadina …",
   "mn17:7-22.3": "città …",
-  "mn17:7-22.4": "Paese …"
+  "mn17:7-22.4": "Paese …",
+  "mn17:23.1": "un individuo."
 }
