Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn17_translation-it-giovannizappa.json
@@ -48,5 +48,6 @@
   "mn17:7-22.4": "Paese …",
   "mn17:23.1": "un individuo.",
   "mn17:23.2": "Vivendo lì, la sua presenza mentale non viene stabilita, la sua mente non si raccoglie, i suoi contaminanti non vengono eliminati, e non arriva al santuario supremo.",
-  "mn17:23.3": "E le necessità della vita di cui un rinunciante ha bisogno—tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati—sono difficili da trovare. …"
+  "mn17:23.3": "E le necessità della vita di cui un rinunciante ha bisogno—tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati—sono difficili da trovare. …",
+  "mn17:23.7": "Quel mendicante deve lasciare quella persona in qualsiasi momento della giornata o notte, senza chiedere. Non deve seguirla. …"
 }
