Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -1,4 +1,5 @@
 {
   "mn18:0.1": "Discorsi Medi 18",
-  "mn18:0.2": "La Torta al Miele"
+  "mn18:0.2": "La Torta al Miele",
+  "mn18:1.1": "Così ho sentito."
 }
