Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -1,5 +1,6 @@
 {
   "mn18:0.1": "Discorsi Medi 18",
   "mn18:0.2": "La Torta al Miele",
-  "mn18:1.1": "Così ho sentito."
+  "mn18:1.1": "Così ho sentito.",
+  "mn18:1.2": "Una volta il Buddha si trovava nella terra dei Sakya vicino a Kapilavatthu nel monastero dell'Albero di Banyan."
 }
