Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn75_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn75_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn75_translation-it-giovannizappa.json
@@ -3,7 +3,7 @@
   "mn75:0.2": "Con Māgaṇḍiya",
   "mn75:1.1": "Così ho sentito.",
   "mn75:1.2": "Una volta il Buddha si trovava nella terra dei Kuru, vicino alla città Kuru chiamata Kammāsadamma, su una stuoia di paglia nella camera del fuoco di un bramino del clan Bhāradvāja.",
-  "mn75:2.1": "Poi il Buddha al mattino si vestì e, prendendo la propria ciotola e tunica, entrò a Kammāsadamma per l'elemosina.",
+  "mn75:2.1": "Poi al mattino il Buddha si vestì e, prendendo la propria ciotola e tunica, entrò a Kammāsadamma per l'elemosina.",
   "mn75:2.2": "Vagò per Kammāsadamma per l'elemosina. Dopo il pasto, al ritorno dal giro per l'elemosina, andò in un certo bosco per la meditazione quotidiana.",
   "mn75:2.3": "Dopo essersi immerso nel bosco profondo, si sedette alla radice di un certo albero per la meditazione quotidiana.",
   "mn75:3.1": "Poi il pellegrino Māgaṇḍiya che stava facendo una passeggiata approcciò quella camera del fuoco.",
