Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -8,5 +8,6 @@
   "mn18:2.3": "addentrandosi profondamente, e si sedette alla radice di un giovane albero di mele per la meditazione quotidiana.",
   "mn18:3.1": "Daṇḍapāṇi il Sakya, mentre faceva una passeggiata,",
   "mn18:3.2": "si addentrò nella Grande Selva. Andò dal Buddha e ci scambiò saluti.",
-  "mn18:3.3": "Una volta che i saluti e cordialità terminarono, rimase in piedi a lato appoggiandosi sul proprio bastone, e disse al Buddha,"
+  "mn18:3.3": "Una volta che i saluti e cordialità terminarono, rimase in piedi a lato appoggiandosi sul proprio bastone, e disse al Buddha,",
+  "mn18:3.4": "“Cosa insegna l’asceta? Cosa spiega?”"
 }
