Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn26_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn26_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn26_translation-it-giovannizappa.json
@@ -86,7 +86,7 @@
   "mn26:15.9": "‘Non è solo per fede che Āḷāra Kālāma dichiara: “Ho realizzato questo insegnamento con la mia conoscenza diretta, e vivo avendolo raggiunto.”",
   "mn26:15.10": "Sicuramente medita conoscendo e vedendo questo insegnamento.’",
   "mn26:15.11": "Quindi sono andato da Āḷāra Kālāma e gli ho detto,",
-  "mn26:15.12": "‘Reverendo Kālāma, fino a che punto dici di aver realizzato questo insegnamento con la tua diretta conoscenza?’",
+  "mn26:15.12": "‘Fratello Kālāma, fino a che punto dici di aver realizzato questo insegnamento con la tua diretta conoscenza?’",
   "mn26:15.13": "In risposta lui dichiarò la dimensione del nulla.",
   "mn26:15.14": "Poi ho pensato,",
   "mn26:15.15": "‘Non è solo Āḷāra Kālāma che ha fede,",
@@ -97,7 +97,7 @@
   "mn26:15.20": "Perché non mi sforzo a realizzare lo stesso insegnamento che Āḷāra Kālāma dice di aver realizzato con la propria conoscenza diretta?’",
   "mn26:15.21": "Presto ho realizzato quell'insegnamento con la mia conoscenza diretta, e ho vissuto avendolo raggiunto.",
   "mn26:15.22": "Quindi sono andato da Āḷāra Kālāma e gli ho detto,",
-  "mn26:15.23": "‘Reverendo Kālāma, tu hai realizzato questo insegnamento con la tua conoscenza diretta fino a questo punto, e dichiari di averlo raggiunto?’",
+  "mn26:15.23": "‘Fratello Kālāma, tu hai realizzato questo insegnamento con la tua conoscenza diretta fino a questo punto, e dichiari di averlo raggiunto?’",
   "mn26:15.24": "‘Sì, reverendo.’",
   "mn26:15.25": "‘Anche io, reverendo, ho realizzato questo insegnamento fino a questo punto, e vivo avendolo realizzato.’",
   "mn26:15.26": "‘Siamo fortunati, reverendo, molto fortunati",
