Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn26_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn26_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn26_translation-it-giovannizappa.json
@@ -142,7 +142,7 @@
   "mn26:16.29": "L'insegnamento che tu hai realizzato con la tua conoscenza diretta, e vivi avendo realizzato, anche Rāma aveva realizzato con la propria conoscenza diretta, e dichiarò di averlo realizzato.",
   "mn26:16.30": "Quindi l'insegnamento che Rāma conosceva direttamente, lo conosci direttamente anche tu, e l'insegnamento che tu conosci direttamente, lo conosceva direttamente anche Rāma.",
   "mn26:16.31": "Rāma era come te e tu sei come Rāma.",
-  "mn26:16.32": "Vieni, reverendo! Guida questa comunità.’",
+  "mn26:16.32": "Vieni, Fratello! Guida questa comunità.’",
   "mn26:16.33": "E così il il mio compagno spirituale Uddaka, figlio di Rāma, mise me nella posizione di maestro, e mi onorava con lodi elevate.",
   "mn26:16.34": "Poi ho pensato,",
   "mn26:16.35": "‘Questo insegnamento non porta alla disillusione, allo svanire della passione, alla cessazione, alla pace, alla realizzazione, al risveglio, e all'estinzione. Porta solamente alla nascita nella dimensione della né percezione né non-percezione.’",
@@ -246,7 +246,7 @@
   "mn26:24.10": "Quindi, dopo essere rimasto ad Uruvelā quanto volevo, sono partito per Benares.",
   "mn26:25.1": "Mentre viaggiavo sulla strada tra Gayā e Bodhgaya, l'asceta Ājīvaka Upaka mi vide",
   "mn26:25.2": "e disse:",
-  "mn26:25.3": "‘Reverendo, le tue facoltà sono così chiare, e la tua carnagione è così pura e luminosa.",
+  "mn26:25.3": "‘Fratello, le tue facoltà sono così chiare, e la tua carnagione è così pura e luminosa.",
   "mn26:25.4": "Nel nome di chi hai preso i voti, reverendo? Chi è il tuo maestro? In che insegnamento credi?",
   "mn26:25.5": "Ho risposto ad Upaka in poesia:",
   "mn26:25.6": "‘Io sono il campione, il conoscitore di tutto,",
