Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn14_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn14_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn14_translation-it-giovannizappa.json
@@ -109,14 +109,14 @@
   "mn14:21.1": "‘Beh, reverendi, vi chiedo questo, e potete rispondere come volete.",
   "mn14:21.2": "Cosa ne pensate, reverendi?",
   "mn14:21.3": "Il Re Bimbisāra è capace di provare gioia perfetta per sette giorni e notti senza muovere il corpo o parlare?’",
-  "mn14:21.4": "‘No non lo è, reverendo.’",
+  "mn14:21.4": "‘No non lo è, Fratello.’",
   "mn14:21.6": "Il Re Bimbisāra è capace di provare gioia perfetta per sei giorni ...",
   "mn14:21.7": "cinque giorni ...",
   "mn14:21.8": "quattro giorni ...",
   "mn14:21.9": "tre giorni ...",
   "mn14:21.10": "due giorni ...",
   "mn14:21.11": "un giorno?’",
-  "mn14:21.12": "‘No non lo è, reverendo.’",
+  "mn14:21.12": "‘No non lo è, Fratello.’",
   "mn14:21.13": "‘Ma io sono capace di provare gioia perfetta per un giorno e notte senza muovere il corpo o parlare.",
   "mn14:21.14": "Sono capace di provare gioia perfetta per due giorni ...",
   "mn14:21.15": "tre giorni ...",
