Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
@@ -5,15 +5,15 @@
   "mn9:1.2": "Una volta il Buddha si trovava vicino a Sāvatthī, nel bosco di Jeta, il monastero di Anāthapiṇḍika.",
   "mn9:1.3": "Lì Sāriputta si rivolse ai mendicanti:",
   "mn9:1.4": "“Reverendi, mendicanti!”",
-  "mn9:1.5": "“Reverendo,” risposero i mendicanti.",
+  "mn9:1.5": "“Fratello,” risposero i mendicanti.",
   "mn9:1.6": "Sāriputta disse:",
   "mn9:2.1": "“Reverendi, si parla di ‘opinione corretta’.",
   "mn9:2.2": "Come definite un discepolo nobile che ha opinione corretta, la cui opinione è corretta, che ha fiducia esperienziale nell'insegnamento, ed è giunto al vero insegnamento?”",
-  "mn9:2.3": "“Reverendo, viaggeremmo a lungo per imparare il significato di questa dichiarazione in presenza del Venerabile Sāriputta.",
+  "mn9:2.3": "“Fratello, viaggeremmo a lungo per imparare il significato di questa dichiarazione in presenza del Venerabile Sāriputta.",
   "mn9:2.4": "Che il Venerabile Sāriputta stesso per favore chiarisca il significato di ciò.",
   "mn9:2.5": "I mendicanti ascolteranno e lo ricorderanno.”",
   "mn9:2.6": "“Beh allora, reverendi, ascoltate e prestate attenzione, ora parlo.”",
-  "mn9:2.7": "\"Sì, reverendo,\" risposero i mendicanti.",
+  "mn9:2.7": "\"Sì, Fratello,\" risposero i mendicanti.",
   "mn9:2.8": "Sāriputta disse:",
   "mn9:3.1": "“Un nobile discepolo comprende ciò che è malsano e la sua radice, e ciò che è sano e la sua radice.",
   "mn9:3.2": "Una volta fatto ciò, è definito come un discepolo nobile che ha opinione corretta, la cui opinione è corretta, che ha fiducia esperienziale nell'insegnamento, ed è giunto al vero insegnamento.",
