Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
@@ -4,7 +4,7 @@
   "mn9:1.1": "Così ho sentito.",
   "mn9:1.2": "Una volta il Buddha si trovava vicino a Sāvatthī, nel bosco di Jeta, il monastero di Anāthapiṇḍika.",
   "mn9:1.3": "Lì Sāriputta si rivolse ai mendicanti:",
-  "mn9:1.4": "“Fratelli, mendicanti!”",
+  "mn9:1.4": "“Fratelli mendicanti!”",
   "mn9:1.5": "“Fratello,” risposero i mendicanti.",
   "mn9:1.6": "Sāriputta disse:",
   "mn9:2.1": "“Fratelli, si parla di ‘opinione corretta’.",
