Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
@@ -107,14 +107,14 @@
   "mn9:36-38.8": "Voglia di viste, suoni, odori, sapori, tatti, e pensieri.",
   "mn9:36-38.9": "La voglia origina dalla sensazione. La voglia cessa quando la sensazione cessa. La pratica che porta alla cessazione della voglia è semplicemente questo nobile ottuplice percorso ...”",
   "mn9:40-42.2": "“Potrebbe esserci un altro modo di descrivere un discepolo nobile?”",
-  "mn9:40-42.3": "“Può esserci, reverendi.",
+  "mn9:40-42.3": "“Può esserci, Fratelli.",
   "mn9:40-42.4": "Un discepolo nobile comprende la sensazione, la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione.",
   "mn9:40-42.6": "Ma cos'è la sensazione? Qual'è la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione?",
   "mn9:40-42.7": "Ci sono queste sei classi di sensazioni.",
   "mn9:40-42.8": "Sensazione nata dal contatto attraverso l'occhio, orecchio, naso, lingua, corpo, e mente.",
   "mn9:40-42.9": "La sensazione origina dal contatto. La sensazione cessa quando il contatto cessa. La pratica che porta alla cessazione della sensazione è semplicemente questo nobile ottuplice percorso ...”",
   "mn9:44-46.2": "“Potrebbe esserci un altro modo di descrivere un discepolo nobile?”",
-  "mn9:44-46.3": "“Può esserci, reverendi.",
+  "mn9:44-46.3": "“Può esserci, Fratelli.",
   "mn9:44-46.4": "Un discepolo nobile comprende il contatto, la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione.",
   "mn9:44-46.6": "Ma cos'è il contatto? Qual'è la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione?",
   "mn9:44-46.7": "Ci sono queste sei classi di contatti.",
